src/pynescript/ast/grammar/antlr4/generated/PinescriptParser.py
# Generated from PinescriptParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

if "." in __name__:
    from .PinescriptParserBase import PinescriptParserBase
else:
    from PinescriptParserBase import PinescriptParserBase


class PinescriptParser ( PinescriptParserBase ):

    grammarFileName = "PinescriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'and'", "'as'", 
                     "'break'", "'by'", "'const'", "'continue'", "'else'", 
                     "'enum'", "'export'", "'false'", "'for'", "'if'", "'import'", 
                     "'in'", "'input'", "'method'", "'not'", "'or'", "'series'", 
                     "'simple'", "'switch'", "'to'", "'type'", "'true'", 
                     "'var'", "'varip'", "'while'", "'('", "')'", "'['", 
                     "']'", "'<<'", "'>>'", "'<='", "'>='", "'=='", "'!='", 
                     "'<'", "'>'", "'='", "'=>'", "'.'", "','", "':'", "'?'", 
                     "'~'", "'&'", "'|'", "'^'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'+='", "'-='", "'*='", "'/='", "'%='", "':='" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "AND", "AS", "BREAK", 
                      "BY", "CONST", "CONTINUE", "ELSE", "ENUM", "EXPORT", 
                      "FALSE", "FOR", "IF", "IMPORT", "IN", "INPUT", "METHOD", 
                      "NOT", "OR", "SERIES", "SIMPLE", "SWITCH", "TO", "TYPE", 
                      "TRUE", "VAR", "VARIP", "WHILE", "LPAR", "RPAR", "LSQB", 
                      "RSQB", "LSHIFT", "RSHIFT", "LESSEQUAL", "GREATEREQUAL", 
                      "EQEQUAL", "NOTEQUAL", "LESS", "GREATER", "EQUAL", 
                      "RARROW", "DOT", "COMMA", "COLON", "QUESTION", "TILDE", 
                      "AMP", "PIPE", "CARET", "PLUS", "MINUS", "STAR", "SLASH", 
                      "PERCENT", "PLUSEQUAL", "MINEQUAL", "STAREQUAL", "SLASHEQUAL", 
                      "PERCENTEQUAL", "COLONEQUAL", "NAME", "NUMBER", "STRING", 
                      "COLOR", "NEWLINE", "WS", "COMMENT", "UNICODE_NOISE", 
                      "ERROR_TOKEN" ]

    RULE_start = 0
    RULE_start_script = 1
    RULE_start_expression = 2
    RULE_start_comments = 3
    RULE_statements = 4
    RULE_statement = 5
    RULE_compound_statement = 6
    RULE_simple_statements = 7
    RULE_trailing_structure_statements = 8
    RULE_simple_statement = 9
    RULE_compound_assignment = 10
    RULE_compound_variable_initialization = 11
    RULE_compound_name_initialization = 12
    RULE_compound_tuple_initialization = 13
    RULE_compound_reassignment = 14
    RULE_compound_augassignment = 15
    RULE_function_declaration = 16
    RULE_parameter_list = 17
    RULE_parameter_definition = 18
    RULE_method_declaration = 19
    RULE_method_parameter_list = 20
    RULE_method_parameter_definition = 21
    RULE_type_declaration = 22
    RULE_field_definitions = 23
    RULE_field_definition = 24
    RULE_enum_declaration = 25
    RULE_enum_definitions = 26
    RULE_enum_definition = 27
    RULE_structure = 28
    RULE_structure_statement = 29
    RULE_structure_expression = 30
    RULE_if_structure = 31
    RULE_elif_structure = 32
    RULE_if_tail = 33
    RULE_else_block = 34
    RULE_for_structure = 35
    RULE_for_structure_to = 36
    RULE_for_structure_in = 37
    RULE_for_iterator = 38
    RULE_while_structure = 39
    RULE_switch_structure = 40
    RULE_switch_case = 41
    RULE_switch_cases = 42
    RULE_switch_pattern_case = 43
    RULE_switch_patterns = 44
    RULE_switch_default_case = 45
    RULE_local_block = 46
    RULE_indented_local_block = 47
    RULE_inline_local_block = 48
    RULE_simple_assignment = 49
    RULE_simple_variable_initialization = 50
    RULE_simple_name_initialization = 51
    RULE_simple_tuple_initialization = 52
    RULE_simple_reassignment = 53
    RULE_simple_augassignment = 54
    RULE_expression = 55
    RULE_expression_statement = 56
    RULE_conditional_expression = 57
    RULE_disjunction_expression = 58
    RULE_conjunction_expression = 59
    RULE_bitwise_or_expression = 60
    RULE_bitwise_xor_expression = 61
    RULE_bitwise_and_expression = 62
    RULE_equality_expression = 63
    RULE_equality_trailing_pair = 64
    RULE_equal_trailing_pair = 65
    RULE_not_equal_trailing_pair = 66
    RULE_inequality_expression = 67
    RULE_inequality_trailing_pair = 68
    RULE_less_than_equal_trailing_pair = 69
    RULE_less_than_trailing_pair = 70
    RULE_greater_than_equal_trailing_pair = 71
    RULE_greater_than_trailing_pair = 72
    RULE_shift_expression = 73
    RULE_shift_op = 74
    RULE_additive_expression = 75
    RULE_additive_op = 76
    RULE_multiplicative_expression = 77
    RULE_multiplicative_op = 78
    RULE_unary_expression = 79
    RULE_unary_op = 80
    RULE_primary_expression = 81
    RULE_argument_list = 82
    RULE_argument_definition = 83
    RULE_subscript_slice = 84
    RULE_atomic_expression = 85
    RULE_literal_expression = 86
    RULE_literal_number = 87
    RULE_literal_string = 88
    RULE_literal_bool = 89
    RULE_literal_color = 90
    RULE_grouped_expression = 91
    RULE_tuple_expression = 92
    RULE_import_statement = 93
    RULE_break_statement = 94
    RULE_continue_statement = 95
    RULE_variable_declaration = 96
    RULE_tuple_declaration = 97
    RULE_declaration_mode = 98
    RULE_assignment_target = 99
    RULE_assignment_target_attribute = 100
    RULE_assignment_target_subscript = 101
    RULE_assignment_target_name = 102
    RULE_assignment_target_group = 103
    RULE_augassign_op = 104
    RULE_type_specification = 105
    RULE_type_qualifier = 106
    RULE_attributed_type_name = 107
    RULE_template_spec_suffix = 108
    RULE_rshift_closed_type_args = 109
    RULE_array_type_suffix = 110
    RULE_type_argument_list = 111
    RULE_name = 112
    RULE_name_load = 113
    RULE_name_store = 114
    RULE_comments = 115
    RULE_comment = 116

    ruleNames =  [ "start", "start_script", "start_expression", "start_comments", 
                   "statements", "statement", "compound_statement", "simple_statements", 
                   "trailing_structure_statements", "simple_statement", 
                   "compound_assignment", "compound_variable_initialization", 
                   "compound_name_initialization", "compound_tuple_initialization", 
                   "compound_reassignment", "compound_augassignment", "function_declaration", 
                   "parameter_list", "parameter_definition", "method_declaration", 
                   "method_parameter_list", "method_parameter_definition", 
                   "type_declaration", "field_definitions", "field_definition", 
                   "enum_declaration", "enum_definitions", "enum_definition", 
                   "structure", "structure_statement", "structure_expression", 
                   "if_structure", "elif_structure", "if_tail", "else_block", 
                   "for_structure", "for_structure_to", "for_structure_in", 
                   "for_iterator", "while_structure", "switch_structure", 
                   "switch_case", "switch_cases", "switch_pattern_case", 
                   "switch_patterns", "switch_default_case", "local_block", 
                   "indented_local_block", "inline_local_block", "simple_assignment", 
                   "simple_variable_initialization", "simple_name_initialization", 
                   "simple_tuple_initialization", "simple_reassignment", 
                   "simple_augassignment", "expression", "expression_statement", 
                   "conditional_expression", "disjunction_expression", "conjunction_expression", 
                   "bitwise_or_expression", "bitwise_xor_expression", "bitwise_and_expression", 
                   "equality_expression", "equality_trailing_pair", "equal_trailing_pair", 
                   "not_equal_trailing_pair", "inequality_expression", "inequality_trailing_pair", 
                   "less_than_equal_trailing_pair", "less_than_trailing_pair", 
                   "greater_than_equal_trailing_pair", "greater_than_trailing_pair", 
                   "shift_expression", "shift_op", "additive_expression", 
                   "additive_op", "multiplicative_expression", "multiplicative_op", 
                   "unary_expression", "unary_op", "primary_expression", 
                   "argument_list", "argument_definition", "subscript_slice", 
                   "atomic_expression", "literal_expression", "literal_number", 
                   "literal_string", "literal_bool", "literal_color", "grouped_expression", 
                   "tuple_expression", "import_statement", "break_statement", 
                   "continue_statement", "variable_declaration", "tuple_declaration", 
                   "declaration_mode", "assignment_target", "assignment_target_attribute", 
                   "assignment_target_subscript", "assignment_target_name", 
                   "assignment_target_group", "augassign_op", "type_specification", 
                   "type_qualifier", "attributed_type_name", "template_spec_suffix", 
                   "rshift_closed_type_args", "array_type_suffix", "type_argument_list", 
                   "name", "name_load", "name_store", "comments", "comment" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    AND=3
    AS=4
    BREAK=5
    BY=6
    CONST=7
    CONTINUE=8
    ELSE=9
    ENUM=10
    EXPORT=11
    FALSE=12
    FOR=13
    IF=14
    IMPORT=15
    IN=16
    INPUT=17
    METHOD=18
    NOT=19
    OR=20
    SERIES=21
    SIMPLE=22
    SWITCH=23
    TO=24
    TYPE=25
    TRUE=26
    VAR=27
    VARIP=28
    WHILE=29
    LPAR=30
    RPAR=31
    LSQB=32
    RSQB=33
    LSHIFT=34
    RSHIFT=35
    LESSEQUAL=36
    GREATEREQUAL=37
    EQEQUAL=38
    NOTEQUAL=39
    LESS=40
    GREATER=41
    EQUAL=42
    RARROW=43
    DOT=44
    COMMA=45
    COLON=46
    QUESTION=47
    TILDE=48
    AMP=49
    PIPE=50
    CARET=51
    PLUS=52
    MINUS=53
    STAR=54
    SLASH=55
    PERCENT=56
    PLUSEQUAL=57
    MINEQUAL=58
    STAREQUAL=59
    SLASHEQUAL=60
    PERCENTEQUAL=61
    COLONEQUAL=62
    NAME=63
    NUMBER=64
    STRING=65
    COLOR=66
    NEWLINE=67
    WS=68
    COMMENT=69
    UNICODE_NOISE=70
    ERROR_TOKEN=71

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def start_script(self):
            return self.getTypedRuleContext(PinescriptParser.Start_scriptContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = PinescriptParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 234
            self.start_script()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_scriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PinescriptParser.EOF, 0)

        def statements(self):
            return self.getTypedRuleContext(PinescriptParser.StatementsContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_start_script

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_script" ):
                listener.enterStart_script(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_script" ):
                listener.exitStart_script(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_script" ):
                return visitor.visitStart_script(self)
            else:
                return visitor.visitChildren(self)




    def start_script(self):

        localctx = PinescriptParser.Start_scriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start_script)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 237
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 4)) & ~0x3f) == 0 and ((1 << (_la - 4)) & 8647773302070112223) != 0):
                self.state = 236
                self.statements()


            self.state = 239
            self.match(PinescriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(PinescriptParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(PinescriptParser.EOF, 0)

        def NEWLINE(self):
            return self.getToken(PinescriptParser.NEWLINE, 0)

        def getRuleIndex(self):
            return PinescriptParser.RULE_start_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_expression" ):
                listener.enterStart_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_expression" ):
                listener.exitStart_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_expression" ):
                return visitor.visitStart_expression(self)
            else:
                return visitor.visitChildren(self)




    def start_expression(self):

        localctx = PinescriptParser.Start_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_start_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 241
            self.expression()
            self.state = 243
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==67:
                self.state = 242
                self.match(PinescriptParser.NEWLINE)


            self.state = 245
            self.match(PinescriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_commentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PinescriptParser.EOF, 0)

        def comments(self):
            return self.getTypedRuleContext(PinescriptParser.CommentsContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_start_comments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_comments" ):
                listener.enterStart_comments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_comments" ):
                listener.exitStart_comments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_comments" ):
                return visitor.visitStart_comments(self)
            else:
                return visitor.visitChildren(self)




    def start_comments(self):

        localctx = PinescriptParser.Start_commentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_start_comments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 248
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==69:
                self.state = 247
                self.comments()


            self.state = 250
            self.match(PinescriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PinescriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(PinescriptParser.StatementContext,i)


        def getRuleIndex(self):
            return PinescriptParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = PinescriptParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 253 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 252
                self.statement()
                self.state = 255 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 4)) & ~0x3f) == 0 and ((1 << (_la - 4)) & 8647773302070112223) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compound_statement(self):
            return self.getTypedRuleContext(PinescriptParser.Compound_statementContext,0)


        def simple_statements(self):
            return self.getTypedRuleContext(PinescriptParser.Simple_statementsContext,0)


        def trailing_structure_statements(self):
            return self.getTypedRuleContext(PinescriptParser.Trailing_structure_statementsContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = PinescriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 260
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 257
                self.compound_statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 258
                self.simple_statements()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 259
                self.trailing_structure_statements()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def compound_assignment(self):
            return self.getTypedRuleContext(PinescriptParser.Compound_assignmentContext,0)


        def type_declaration(self):
            return self.getTypedRuleContext(PinescriptParser.Type_declarationContext,0)


        def enum_declaration(self):
            return self.getTypedRuleContext(PinescriptParser.Enum_declarationContext,0)


        def structure_statement(self):
            return self.getTypedRuleContext(PinescriptParser.Structure_statementContext,0)


        def method_declaration(self):
            return self.getTypedRuleContext(PinescriptParser.Method_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(PinescriptParser.Function_declarationContext,0)


        def getRuleIndex(self):
            return PinescriptParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = PinescriptParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_compound_statement)
        try:
            self.state = 268
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 262
                self.compound_assignment()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 263
                self.type_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 264
                self.enum_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 265
                self.structure_statement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 266
                self.method_declaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 267
                self.function_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_statementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
